fixes NumberOfPlayers input alignment

--- a/src/components/NumberOfPlayers.css
+++ b/src/components/NumberOfPlayers.css
@@ -8,31 +8,14 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 label {
     padding-top: 2rem;
     text-align: center;
-}
-
-.form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    font-size: 1.5rem;
 }
 
 .centre-container-items {
     display: flex; 
-    align-items: center; 
-    flex-direction: column;
-}
-
-.input-container {
-    display: flex;
     align-items: center;
+    justify-content: center;
 }
