--- a/src/pages/scoreboard.css
+++ b/src/pages/scoreboard.css
@@ -4,4 +4,5 @@
     justify-content: center;
     flex-direction: row;
     align-items: center;
+    text-align: center;
 }
